<resources>
    <string name="app_name">TheStraylightRun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menustate_change_skin">CHANGE SKIN</string>
    <string name="text_menustate_team">TEAM</string>
    <string name="text_menustate_backpack">BACKPACK</string>
    <string name="text_menustate_load">LOAD</string>
    <string name="text_menustate_save">SAVE</string>
    <string name="text_menustate_option">OPTION</string>
    <string name="text_menustate_exit">EXIT</string>
    <string name="text_new">NEW</string>
    <string name="text_load">LOAD</string>
    <string name="text_cursor">-></string>
    <string name="text_menu">MENU</string>
    <string name="text_a">A</string>
    <string name="text_b">B</string>
    <string name="text_spring">SPRING</string>
    <string name="text_summer">SUMMER</string>
    <string name="text_fall">FALL</string>
    <string name="text_winter">WINTER</string>
    <string name="text_quest_log">Quest Log</string>
    <string name="text_backpack">Backpack</string>
    <string name="text_bug_catching_net">Bug Catching Net</string>
    <string name="text_cheese">Cheese</string>
    <string name="text_egg">Egg</string>
    <string name="text_fodder">Fodder</string>
    <string name="text_growing_pot">Growing Pot</string>
    <string name="text_grow_system_parts">Grow System Parts</string>
    <string name="text_honey_pot">Honey Pot</string>
    <string name="text_meat">Meat</string>
    <string name="text_milk">Milk</string>
    <string name="text_seed_papaya">Papaya Seed</string>
    <string name="text_seed_strawberry">Strawberry Seed</string>
    <string name="text_seed_guava">Guava Seed</string>
    <string name="text_seed_longan">Longan Seed</string>
    <string name="text_seed_eggplant">Eggplant Seed</string>
    <string name="text_seed_lemongrass">Lemongrass Seed</string>
    <string name="text_seed_corn">Corn Seed</string>
    <string name="text_seed_banana">Banana Seed</string>
    <string name="text_seed_bitter_melon">Bitter Melon Seed</string>
    <string name="text_seed_radish">Radish Seed</string>
    <string name="text_seed_peanut">Peanut Seed</string>
    <string name="text_seed_carrot">Carrot Seed</string>
    <string name="text_seed_tomato">Tomato Seed</string>
    <string name="text_seed_onion">Onion Seed</string>
    <string name="text_seed_garlic">Garlic Seed</string>
    <string name="text_seed_mystery">Mystery Seed</string>
    <string name="text_seed_unlisted">Unlisted Seed</string>
    <string name="text_plant_inspectioner_200">Plant Inspectioner 200</string>
    <string name="text_robot_reprogrammer_4000">Robot Reprogrammer 4000</string>
    <string name="text_scissors">Scissors</string>
    <string name="text_shovel">Shovel</string>
    <string name="text_watering_can">Watering Can</string>
    <string name="text_run_one">Run One</string>
    <string name="text_run_two">Run Two</string>
    <string name="text_run_three">Run Three</string>
    <string name="text_run_four">Run Four</string>
    <string name="text_run_five">Run Five</string>
    <string name="text_ai_quest_00">AI Quest 00</string>
    <string name="text_robot_dialog_quest_00">Robot Dialog Quest 00</string>
    <string name="text_seed_shop_owner_quest_00">Seed Shop Owner Quest 00</string>
    <string name="click_button_holder_a_or_b">Click \"ButtonHolderA\" or \"ButtonHolderB\" to equip the RobotReprogrammer4000.</string>
    <string name="equip_robot_reprogrammer_4000">Congratulation for equipping the RobotReprogrammer4000! Use it on the robot to run the new code!</string>
    <string name="use_robot_reprogrammer_4000">Congratulation for using the RobotReprogrammer4000 on the robot!</string>
    <string name="robot_dialogfragment_off">off</string>
    <string name="robot_dialogfragment_walk">walk</string>
    <string name="robot_dialogfragment_run">run</string>
    <string name="robot_dialogfragment_till_seed_water">till/seed/water</string>
    <string name="robot_dialogfragment_water">water</string>
    <string name="robot_dialogfragment_harvest">harvest</string>
    <string name="robot_dialogfragment_ide">IDE</string>
    <string name="text_done">done</string>
    <string name="ide_dialogfragment_execute">execute</string>
    <string-array name="hummingbird_mother">
        <item>if (hope.exist()) {</item>
        <item>    mother.keepTrying();</item>
        <item>}</item>
    </string-array>
    <string-array name="message_of_a_khmer_rouge_survivor">
        <item>\“Don\'t forget us. And don\'t let it happen again — to anyone.\”</item>
        <item>\“They tried to erase us. But I remembered the names. I remembered the taste of my mother\'s soup. I remembered the stories my sister whispered when we were scared. I remembered how to grow food when there was none.\”</item>
        <item>\“Even when we had nothing, we had each other. And if you still have someone, hold them close. Feed them. Forgive them. Teach them.\”</item>
        <item>\“Build a world where no child has to survive like we did. A world where kindness is not a weakness, but the only power worth having.\”</item>
    </string-array>
    <string-array name="bug_catcher_dialogue_array">
        <item>I\'m only in this to catch a land eel!</item>
        <item>Does anyone see my bug catching net?</item>
        <item>Call me the BEAST MASTER!</item>
        <item>Will there be pie?</item>
        <item>There\'s an aroma wafting off our leader...</item>
    </string-array>
    <string name="rival_leader_dialogue00">Congratulations! You beat our 5 contest trainers! You just earned a fabulous prize! [Player] received a NUGGET! By the way, would you like to join TEAM ROCKET? We\'re a group dedicated to evil using POKEMON! Want to join? Are you sure? Come on, join us! I\'m telling you to join! OK, you need convincing! I\'ll make you an offer you can\'t refuse!   With your ability, you could become a top leader in TEAM ROCKET!</string>
    <string name="scientist_dialogue00">Hello there! Welcome to the world of JAVA! My name is FOO BAR! People call me the JAVA PROF! This world is inhabited by creatures called OBJECT! For some people, OBJECT are pets. Others use them for fights. Myself... I study OBJECT as a profession. First, what is your name?</string>
    <string name="edittext_name_hint">name</string>
    <string name="scientist_dialogue01_template">Right! So your name is %s!</string>
    <string name="scientist_dialogue02">This is my grandson. He\'s been your rival since you were a baby. ...Erm, what is his name again?</string>
    <string name="scientist_dialogue03_template">That\'s right! I remember now! His name is %s!</string>
    <string name="scientist_dialogue04_template">%s!</string>
    <string name="scientist_dialogue05">Your very own JAVA legend is about to unfold! A world of dreams and adventure with OBJECT awaits! Let\'s go!</string>
    <string-array name="seed_shop_dialogue_array">
        <item>Hello! I was cleaning out my father\'s belongings when I found these mystery seeds. I can\'t keep a cactus alive. You have a green thumb, how about you grow these seeds for me? If you get me 3 mystery products, I\'ll give you some coins! Also, you can keep the shovel, watering can, and mystery seeds!</item>
        <item>Hello! Please germinate and grow the mystery seeds, then harvest 3 mystery products and place them in the shipping bin.</item>
        <item>Hello! The mystery products you\'ve harvested were FAR out. Like OUTER-SPACE far. You can probably bring about world peace with what you\'re growing.</item>
    </string-array>
    <string name="text_seed_name">seed\'s name</string>
    <string name="text_seed_description">seed\'s description</string>
    <string-array name="run_one_dialogue_array">
        <item>provide [name] and [description] for your seed.</item>
        <item>in progress, currently providing a [name] and [description] for your seed.</item>
        <item>excellent work! you\'ve named your seed [%s] and its description is [%s].</item>
    </string-array>
    <string-array name="run_two_dialogue_array">
        <item>till, seed, and water [%d] tiles.</item>
        <item>in progress, currently at [%d] out of [%d] tiles tilled, seeded, and watered.</item>
        <item>congratulation! you\'ve finished tilling, seeding, and watering [%d] tiles.</item>
    </string-array>
    <string-array name="run_three_dialogue_array">
        <item>harvest [%d] mystery products AND cull all [%d] diseased plants.</item>
        <item>in progress, currently at [%d] out of [%d] harvested AND [%d] out of [%d] culled.</item>
        <item>well done! you\'ve finished harvesting [%d] mystery products AND culled [%d] diseased plants.</item>
    </string-array>
    <string-array name="run_four_dialogue_array">
        <item>herd [%d] sheeps into grow room to obtain [grow system parts].</item>
        <item>in progress, currently at [%d] out of [%d] sheeps herded ([grow system parts] obtained).</item>
        <item>take pride! you\'ve finished herding [%d] sheeps (obtaining [grow system parts]).</item>
    </string-array>
    <string-array name="run_five_dialogue_array">
        <item>...</item>
        <item>in progress.</item>
        <item>rest! you\'ve made them proud.</item>
    </string-array>
    <string-array name="clippit_dialogue_array">
        <item>It looks like you\'re trying to bring about world peace. Would you like some help?</item>
        <item>We\'re going to get the entire world stoned for a week! We\'ll need a lot of mystery product. Start by tilling 4,200 GrowableTile.</item>
        <item>Tilling 4,200 GrowableTile with a shovel will take all day. Fortunately, there\'s a rust-bucket robot that is software-upgradeable. It\'s time to work smarter (not harder)!</item>
        <item>We\'re the first to finish, but now we have to wait for everyone else. Instead of wasting time doing nothing, how about we learn the basics of modifying genes? Then we can splice the gene responsible for THC production into the genome of the world\'s fastest growing organism.</item>
        <item>Alright! You\'ve created THC-producing-kelp, and you\'re one step closer to getting the entire world stoned for a week. Let\'s go on a side quest to deposit the mystery seeds into the world\'s seed bank.</item>
        <item>You\'ve been recruited to a team who are on a mission to terraform the moon. It\'s time to create some moonrocks!</item>
        <item>This is it, the final run. The Panthers are wrecking havoc and keeping law enforcement busy. You got Molly in your ears with Mary as your tracer. Welcome to Straylight.</item>
    </string-array>
    <string-array name="names_of_sender_dialogue_array_run_four">
        <item>A-Student</item>
        <item>HonestStruggler</item>
        <item>A-Student</item>
        <item>NotTrying</item>
        <item>HonestStruggler</item>
        <item>A-Student</item>
        <item>NotTrying</item>
        <item>HonestStruggler</item>
        <item>A-Student</item>
        <item>NotTrying</item>
        <item>HonestStruggler</item>
        <item>A-Student</item>
        <item>NotTrying</item>
        <item>HonestStruggler</item>
        <item>A-Student</item>
        <item>NotTrying</item>
        <item>SYSTEM42</item>
    </string-array>
</resources>