<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_off"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_turn_in_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_turn_in_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_turn_in_place"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_off" />

    <TextView
        android:id="@+id/tv_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_walk"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_turn_in_place" />

    <TextView
        android:id="@+id/tv_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_run"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_till_seed_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_walk" />

    <TextView
        android:id="@+id/tv_till_seed_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_till_seed_water"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_run" />

    <TextView
        android:id="@+id/tv_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_water"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_harvest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_till_seed_water" />

    <TextView
        android:id="@+id/tv_harvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_harvest"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_ide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_water" />

    <TextView
        android:id="@+id/tv_ide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/robot_dialogfragment_ide"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_harvest" />

</androidx.constraintlayout.widget.ConstraintLayout>